[package]
name = "booty"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
chrono = "0.4.38"
nix = { version = "0.29.0", features = ["net", "reboot"] }
openssl = "0.10.64"
russh-keys = { version = "0.43.0", features = ["openssl"] }
tokio = { version = "1.38.0", features = ["net", "rt", "macros"] }
